--- a/simple-dubbo/simple-base/pom.xml
+++ b/simple-dubbo/simple-base/pom.xml
@@ -10,6 +10,8 @@
     <modules>
         <module>../simple-provider</module>
         <module>../simple-consumer</module>
+        <module>../simple-xml-provider</module>
+        <module>../simple-xml-consumer</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -56,6 +58,12 @@
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-serialization-hessian2</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-config-spring</artifactId>
                 <version>${dubbo.version}</version>
             </dependency>
         </dependencies>
